Fix spacing and heading font

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -45,7 +45,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  /*font-family: "PT Sans", Helvetica, Arial, sans-serif;*/
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
@@ -299,7 +299,7 @@ a.sidebar-nav-item:focus {
 
 .page,
 .post {
-  margin-bottom: 4em;
+  margin-bottom: 6em;
 }
 
 /* Blog post or page title */
